Removed unused code for skipping java.library.path modification
# 0.00.06 (53639) Jun 30, 2011
Feasibility test for skipping java.library.path modification
# 0.00.05 (53630) Jun 30, 2011
# 0.00.04 (53629) Jun 30, 2011
# 0.00.03 (53601) Jun 30, 2011
# 0.00.02 (53600) Jun 30, 2011
# 0.00.01 (53577) Jun 29, 2011
Added Molecule Shapes